--- a/kupus_calculator.ipynb
+++ b/kupus_calculator.ipynb
@@ -152,11 +152,10 @@
    ],
    "source": [
     "historical_events = {\n",
-    "    \"Vocations Day\": datetime(2017, 5, 20), # Vocations Day (20 May 2017) - commemoration of the first Tilburian priestly vocation\n",
-    "    \"Moving Day\": datetime(2002, 8, 1), # Moving Day (1 August 2002) - commemoration of the founding of the Faire Nation, as well as the occupation of the rebelious Fiefdom of Serenity (Tilbury IV), and occupations of every Tilbury house I-IV\n",
-    "    \"Festival of Le Capitaine\": datetime(2013, 2, 7), # Festival of Le Capitaine (7 February 2013) - commemoration of the Man Who Saved tilbury\n",
-    "    \"Cleaning Day\": datetime(2005, 4, 1), # Cleaning Day (1 April 2005) - commemoration of the First Tilbury Party and presumably first house cleaning (2005)\n",
-    "    #\"Adam Lucas' Wedding Anniversary\": datetime(2023, 11, 6),  # Adam Lucas' Wedding Anniversary (6 November ????)\n",
+    "    \"Vocations Day\": datetime(2017, 5, 20), # Vocations Day (20 May 2017)\n",
+    "    \"Moving Day\": datetime(2002, 8, 1), # Moving Day (1 August 2002) \n",
+    "    \"Festival of Le Capitaine\": datetime(2013, 2, 7), # Festival of Le Capitaine (7 February 2013)\n",
+    "    \"Cleaning Day\": datetime(2005, 4, 1), # Cleaning Day (1 April 2005)\n",
     "}\n",
     "\n",
     "# calculate Tilburian dates for historical events\n",
